--- a/Example/ZLKeyboardManager/ZLKeyboardManager-Info.plist
+++ b/Example/ZLKeyboardManager/ZLKeyboardManager-Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>这里填写你的详细说明，例如：用于播放您资料库中的音乐</string>
 </dict>
 </plist>
