--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,7 @@ use_frameworks!
 platform :ios, '10.0'
 
 target 'ZLKeyboardManager_Example' do
-#  pod 'IQKeyboardManager' , '6.5.11'
+  pod 'IQKeyboardManager' , '6.5.11'
 
   pod 'ZLKeyboardManager', :path => '../'
 
